# SREnity

./: .cursorrules  .gitignore  FAILURE_MODE_TAXONOMY.md  MARKETING_CONTENT.md  README.md  certification-challenge-report.md  demo-day-script.md  env.example  pyproject.toml  srenity_trace_failure_modes.json  srenity_trace_failure_modes.txt  trace_failure_modes.json  trace_failure_modes.txt
.streamlit/: config.toml
app/: README.md  requirements.txt  run.sh  streamlit_app.py
backend/: README.md  __init__.py  agent_service.py  main.py  rca_service.py  runbook_service.py  test_backend.py
backend/analysis/: __init__.py  graph.py
backend/analysis/tools/: __init__.py  app_tool.py  cache_tool.py  db_tool.py  web_tool.py
backend/data/knowledge_base/app/: app_500_classnotfoundexception_incident.md  app_500_illegalargumentexception_incident.md  app_500_nullpointerexception_incident.md  app_500_outofmemoryerror_incident.md  app_500_runtimeexception_incident.md  app_500_sqlexception_incident.md  app_503_serviceunavailableexception_incident.md  app_healthy_service_baseline.md  app_successful_operation_baseline.md  app_successful_request_baseline.md
backend/notebooks/: config.py  graph_structure.mmd  multi_layer_analysis.ipynb  run.py
backend/tests/: test_cache_tool.py
data/sdg/: redis_sdg_questions.json  redis_test_questions.json  redis_test_questions_fixed.json  redis_test_questions_ragas.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/favicon/: site.webmanifest
frontend/src/: App.tsx
frontend/src/components/: AlertCard.tsx  AlertsSection.tsx  AnalysisView.tsx  Dashboard.tsx  IncidentHistorySection.tsx  ServiceRow.tsx  ServicesTable.tsx  Sidebar.tsx  Sparkline.tsx  StatusBadge.tsx  ThreeDotMenu.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAnalysisStream.ts
frontend/src/services/: api.ts
frontend/src/styles/: analysis.css  dashboard.css  globals.css
frontend/src/types/: index.ts
notebooks/: agent_demo.ipynb  rag_evaluation.ipynb  sre_prototype.ipynb
qdrant_db/: meta.json
src/: __init__.py
src/agents/: __init__.py  sre_agent.py  test_agent.py  tools.py
src/rag/: advanced_retrieval.py  bm25_reranker_retriever.py  ensemble_retriever.py  naive_retriever.py
src/utils/: config.py  database_utils.py  document_loader.py  prompts.py  ragas_utils.py  sdg_utils.py
srenity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+24 files in other folders)
